# Point-Cloud-Experiments

./: README.md
ASUS/src/: main.cpp
B_spline/: CMakeCache.txt  Makefile  cmake_install.cmake
Filtering/: .project  filtering.cpp
ICP/: .project  CMakeLists.txt  README.md  icp.cpp  icp_cube.cpp  icp_cup.cpp  icp_cup_2working.cpp  icp_cup_multiple.cpp  icp_simple.cpp  icp_simple2.cpp
Interactive ICP/: CMakeLists.txt  interactive_icp_cup.cpp
Merging/: CMakeLists.txt  filtering.cpp
Pairwise_registration/: CMakeLists.txt  README.md  pairwise.cpp  pairwise_incremental_registration.cpp
Region_growing/: region_growing_rgb_segmentation.cpp
To_PCD/: CMakeLists.txt  README.md  pcd_write.cpp
resampling/: CMakeCache.txt  Makefile  bun0-mls.pcd  cmake_install.cmake  resampling  resampling.cpp
